deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helm-workshop
  name: helm-workshop
spec:
  type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: helm-workshop
